# FastGlobalRegistration

./: FastGlobalRegistration.sln
Debug/: FastGlobalRegistration.ilk
FastGlobalRegistration/: CMakeLists.txt  FastGlobalRegistration.vcxproj
FastGlobalRegistration/Debug/: vc120.idb
FastGlobalRegistration/Debug/FastGlob.358B499D.tlog/: CL.read.1.tlog  CL.write.1.tlog  FastGlobalRegistration.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
